@@ -17,23 +17,6 @@ rem limitations under the License.
 
 echo.
 
-set TESTS_CLASSPATH="%~dp0lib\*;%~dp0settings"
-
-call %~dp0jvm-opts.bat %*
-
-call java %JVM_OPTS% -cp "%TESTS_CLASSPATH%" "org.apache.ignite.tests.CassandraDirectPersistenceLoadTest"
-
-if %errorLevel% NEQ 0 (
-    echo.
-    echo --------------------------------------------------------------------------------
-    echo [ERROR] Tests execution failed
-    echo --------------------------------------------------------------------------------
-    echo.
-    exit /b %errorLevel%
-)
-
-echo.
-echo --------------------------------------------------------------------------------
-echo [INFO] Tests execution succeed
-echo --------------------------------------------------------------------------------
-echo.
+set "JVM_OPTS=-Xms6g -Xmx6g -XX:+AggressiveOpts -XX:MaxMetaspaceSize=256m"
+set "JVM_OPTS=%JVM_OPTS% -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:+UseTLAB -XX:NewSize=128m -XX:MaxNewSize=768m"
+set "JVM_OPTS=%JVM_OPTS% -Xss16m"
